Update package versions in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-opencv-python>=4.8.0
-numpy>=1.24.0
-matplotlib>=3.7.0
-pandas>=2.0.0
-PyInstaller>=5.13.0
-pywin32>=306
-setuptools>=65.0.0
-pillow>=10.0.0
-scipy>=1.11.0
+opencv-python==4.8.1.78
+numpy==1.24.4
+matplotlib==3.7.3
+pandas==2.0.3
+PyInstaller==5.13.2
+pywin32==306
+setuptools==68.2.2
+pillow==10.0.1
+scipy==1.11.4
